@@ -86,6 +86,11 @@ public:
     // These are used to help debug <rdar://problem/48634553>.
     FrameState() { RELEASE_ASSERT(RunLoop::isMain()); }
     ~FrameState() { RELEASE_ASSERT(RunLoop::isMain()); }
+    FrameState(const FrameState&) = default;
+    FrameState(FrameState&&) = default;
+    FrameState& operator=(const FrameState&) = default;
+    FrameState& operator=(FrameState&&) = default;
+
     const Vector<String>& documentState() const { return m_documentState; }
     enum class ShouldValidate : bool { No, Yes };
     void setDocumentState(const Vector<String>&, ShouldValidate = ShouldValidate::No);
